tests/good/allof.siv
if allof(true) {
	stop;
}
if allof(true, true) {
	stop;
}
elsif allof(true, true, false) {
	stop;
}
