tests/bad/invalid_test_list.siv

if allof(true, false {
    discard;
}